Fixed BUG#5287: Stored procedure crash if leave outside loop. Bug in diff_handlers and diff_cursors made it attempt to pop the wrong number at jumps sometimes.

mysql-test/r/sp.result:
  New testcase for BUG#5287.
mysql-test/t/sp.test:
  New testcase for BUG#5287.
sql/sp_pcontext.cc:
  Fixed diff_handlers and diff_cursors methods, they miscounted.
sql/sp_pcontext.h:
  Made m_handlers available for diff_handlers.